FDA-26 Create Tobacco web pages adding charts for establishments and product listings

--- a/src/pages/apis/tobacco/establishments/_fields.yaml
+++ b/src/pages/apis/tobacco/establishments/_fields.yaml
@@ -1,12 +1,12 @@
 properties:
   owner_name:
-    description:
+    description: "Tobacco establishment owner name"
     format:
     is_exact: true
     possible_values:
     type: string
   address:
-    description:
+    description: "Address of the establishment"
     format:
     is_exact: true
     possible_values:
