--- a/src/pages/apis/tobacco/products/_infographics.yaml
+++ b/src/pages/apis/tobacco/products/_infographics.yaml
@@ -1,10 +1,10 @@
-- title: "Number of products with from all product categories"
-  short: "Product categories"
+- title: "Tobacco product listings by categories"
+  short: "Tobacco product listings"
   dataset: TOBACCOPRODUCTS
   description:
-    - "NSDE provides marketing information for OTC and prescription drugs for both humans and animals, as demonstrated below."
+    - ""
   countParam: "product_category"
   filters:
-    - title: "All Tobacco products by product  category"
+    - title: "All tobacco product listings"
       searchParam: ''
   type: Line
