--- a/src/pages/apis/tobacco/establishments/_meta.yaml
+++ b/src/pages/apis/tobacco/establishments/_meta.yaml
@@ -4,7 +4,7 @@ label: Tobacco establishment registrations
 title: Tobacco establishment registrations
 description: "Recalls are an appropriate alternative method for removing or correcting marketed consumer products, their labeling, and/or promotional literature that violate the laws administered by the Food and Drug Administration (FDA)."
 datasets:
-  - RES
+  - TOBACCOESTABLISHMENTS
 path: /apis/tobacco/establishments
 api_path: /tobacco/establishments
 start: 20090101
