--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
     "react-radio-group": "^3.0.2",
     "react-select": "^1.2.1",
     "react-sticky-state": "^2.1.9",
+    "react-table": "^6.9.0",
     "react-timeseries-charts": "0.12.8",
+    "react-tooltip": "^3.9.2",
     "react-transition-group": "^2.2.1",
+    "reactstrap": "^7.1.0",
     "recharts": "1.0.0-beta.0",
     "scroll-into-view": "^1.9.1",
     "stylus": "^0.54.5",
