--- a/src/constants/fields/deviceudi.yaml
+++ b/src/constants/fields/deviceudi.yaml
@@ -59,7 +59,7 @@ properties:
   device_description:
     description: "Additional relevant information about the device that is not already captured as a distinct GUDID data attribute."
     format:
-    is_exact: true
+    is_exact: false
     possible_values:
     type: string
   device_sizes:
