--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-sticky-state": "^2.1.9",
     "react-table": "^6.9.0",
     "react-timeseries-charts": "0.12.8",
+    "react-tippy": "^1.2.3",
     "react-tooltip": "^3.9.2",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^7.1.0",
