--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "stylus": "^0.54.5",
     "victory": "0.26.1",
     "whatwg-fetch": "2.0.3",
-    "with-query": "1.0.2",
+    "with-query": "^1.1.2",
     "xlsx": "^0.12.12"
   },
   "keywords": [
