Credit to Iodine developers.

--- a/src/pages/about/_content.yaml
+++ b/src/pages/about/_content.yaml
@@ -41,7 +41,10 @@
   - "Angelique Hebert"
   - "Sean Herron"
   - "Steven Hubbard"
-  - "Iodine, Inc. (_Previous Contractor_)"
+  - "Adam Baker, Iodine _(former contractor)_"
+  - "Thomas Goetz, Iodine _(former contractor)_"
+  - "Matt Mohebi, Iodine _(former contractor)_"
+  - "Hans Nelson, Iodine _(former contractor)_"
   - "Taha Kass-Hout"
   - "Milan Kubic"
   - "Joshua Lehman"
