Added WIZMED app link.

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -14,3 +14,5 @@
   url: 'http://trackmyimplants.com/trackmy-implants/'
 - title: 'OpenVigilFDA'
   url: 'http://openvigil.pharmacology.uni-kiel.de/openvigilfda.php'
+- title: 'WIZMED'
+  url: 'http://www.wizmed.com/'
