Updated for live push.

--- a/src/pages/apis/other/substance/_explorers.yaml
+++ b/src/pages/apis/other/substance/_explorers.yaml
@@ -2,7 +2,7 @@ oneRecord:
   params:
     - search for all records and display one.
     - limit to 1 record.
-  query: 'https://openfda-api.preprod.fda.gov/other/substance.json?limit=1'
+  query: 'https://api.fda.gov/other/substance.json?limit=1'
   description:
     - This query searches for all records and asks for a single one.
   title: One Substance Data record
@@ -10,21 +10,21 @@ byName:
   params:
   - search for a specific name.
   - limit to 1 record.
-  query: 'https://openfda-api.preprod.fda.gov/other/substance.json?search=names.name:"PARACETAMOL"'
+  query: 'https://api.fda.gov/other/substance.json?search=names.name:"PARACETAMOL"'
   description:
     - This query searches for records with the specific name "PARACETAMOL", and returns one result.
   title: Substance Data Record by Name
 byCASRegistryNumber:
   params:
   - search for records by Named Codes.
-  query: 'https://openfda-api.preprod.fda.gov/other/substance.json?search=codes.code:"220127-57-1"'
+  query: 'https://api.fda.gov/other/substance.json?search=codes.code:"220127-57-1"'
   description:
     - This query searches for records with the specific CAS Registry Number "220127-57-1".
   title: Substance Data Record by Named Code
 byUNII:
   params:
   - search for records by UNII.
-  query: 'https://openfda-api.preprod.fda.gov/other/substance.json?search=unii:"09211A0HHL"'
+  query: 'https://api.fda.gov/other/substance.json?search=unii:"09211A0HHL"'
   description:
     - This query searches for records with the specific UNII "09211A0HHL".
   title: Substance Data Record by UNII
@@ -32,7 +32,7 @@ byFormula:
   params:
   - search for a specific molecular formula.
   - limit to 1 record.
-  query: 'https://openfda-api.preprod.fda.gov/other/substance.json?search=structure.formula:"C6H12"'
+  query: 'https://api.fda.gov/other/substance.json?search=structure.formula:"C6H12"'
   description:
     - This query searches for records with the specific molecular formula "C6H12", and returns one result.
   title: Substance Data Record by Molecular Formula
