--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -64,7 +64,7 @@ updates:
     date: 2016-12-06
     desc: "Transparency in the actions we take as an agency, and our reasons for taking them, is an important value for FDA in its..."
   - title: openFDA central download page
-    path: /tools/downloads
+    path: /downloads
     date: 2016-12-23
     desc: "Downloading full datasets has never been easier! Visit our central download page to download any and all openFDA datasets."
   - title: openFDA query result increased
@@ -83,3 +83,15 @@ updates:
     path: /about/updates/2018_06_22_new_look_same_great_api
     date: 2018-06-22
     desc: "openFDA is committed to transparency and always providing the best data available. This includes modifying released..."
+  - title: New openFDA Dataset -  NDC Directory
+    path: /apis/drug/ndc/
+    date: 2018-11-29
+    desc: "The NDC Directory is now available via openFDA."
+  - title: Animal Drug Adverse Events Now Available
+    path: /about/updates/2019_04_03_Animal_Drug_Adverse_Events_Now_Available
+    date: 2019-04-03
+    desc: 'The first openFDA animal drug dataset "Animal Drug Adverse Event Reports" is available via openFDA.'
+  - title: New openFDA Dataset - Substance Data
+    path: /apis/other/substance/
+    date: 2019-12-10
+    desc: "The Substance Data endpoint is now available via openFDA."
