--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-highlight": "^0.10.0",
     "react-joyride": "^2.0.5",
     "react-modal": "^3.1.0",
-    "react-promise": "^3.0.2",
+    "react-promise": "2.0.0",
     "react-radio-group": "^3.0.2",
     "react-select": "^1.2.1",
     "react-sticky-state": "^2.1.9",
