--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -272,6 +272,24 @@
           link: /apis/device/registrationlisting/download/
         - title: Searchable fields
           link: /apis/device/registrationlisting/searchable-fields/
+    - title: Serological Testing Validation
+      id: device-serological-testing-validation
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/device/serologytest/
+        - title: How to use the API
+          link: /apis/device/serologytest/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/device/serologytest/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/device/serologytest/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/device/serologytest/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/device/serologytest/download/
+        - title: Searchable fields
+          link: /apis/device/serologytest/searchable-fields/
     - title: Unique Device Identifier
       id: device-unique-device-identifier
       collapse: true
