--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -104,6 +104,6 @@ updates:
     date: 2019-12-16
     desc: "The openFDA team is proud to announce that openFDA has now surpassed an astounding milestone: 200 million API calls."
   - title: New openFDA Dataset - Serological Testing Validation
-    path: /apis/device/serologytest/
+    path: /apis/device/covid19serology/
     date: 2020-05-15
-    desc: "The Serological Testing Validation endpoint is now available via openFDA."
+    desc: "The COVID-19 Serological Testing Validation endpoint is now available via openFDA."
